# aip-guardian

./: .env.example  .gitignore  CONTEXT.md  Dockerfile  INSTALL.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
scripts/: docker-entrypoint.sh  generate_hmac_key.py  health_check.py  post_store_hook.py  register_existing_aips.py  setup_wizard.py
src/guardian/: __init__.py  celery_app.py  config.py  database.py  i18n.py  main.py
src/guardian/api/: aips.py  anchors.py  audit.py  dashboard.py  deps.py  health.py  router.py
src/guardian/connector/: __init__.py  archivematica_client.py
src/guardian/locale/en/LC_MESSAGES/: messages.mo  messages.po
src/guardian/locale/es/LC_MESSAGES/: messages.mo  messages.po
src/guardian/models/: __init__.py  aip_status.py  anchor_registry.py  audit_log.py  content_fingerprint.py  hmac_registry.py  repair_record.py
src/guardian/schemas/: __init__.py  aip.py  anchor.py  audit.py  dashboard.py
src/guardian/services/: __init__.py  anchor_verifier.py  audit_logger.py  auto_repair.py  chain_verifier.py  change_detector.py  fixity_verifier.py  hash_utils.py  hmac_authenticator.py  key_manager.py  merkle_tree.py  notification.py  replica_manager.py  rfc3161_anchor.py
src/guardian/tasks/: anchor_tasks.py  audit_tasks.py  fixity_tasks.py  repair_tasks.py
src/guardian/web/: routes.py
src/guardian/web/static/css/: app.css
src/guardian/web/static/js/: app.js
src/guardian/web/templates/: aip_detail.html  aips.html  anchors.html  audit_log.html  base.html  dashboard.html  login.html  settings.html  setup.html
src/guardian/web/templates/partials/: lang_switcher.html  navbar.html  status_badge.html
tests/: conftest.py  test_api_aips.py  test_api_audit.py  test_auto_repair.py  test_chain_verifier.py  test_fixity_verifier.py  test_hmac_authenticator.py  test_merkle_tree.py
tests/fixtures/corrupted_bag/: bag-info.txt  manifest-sha256.txt
tests/fixtures/corrupted_bag/data/: file1.txt
tests/fixtures/invalid_bag/: bag-info.txt
tests/fixtures/valid_bag/: tagmanifest-sha256.txt
tests/fixtures/valid_bag/data/: file1.txt  file2.txt
